yoshimi 1.5.8 M

2018-5-31 Will
* Corrected GUI handling of part saves.
  Also improved label colour handling.
* Corrected Evnelope freemode delete point.

2018-5-28 Will
* Changed lstat to stat in MiscFuncs.cpp
* Finalised code and docs.
* Set release version as 1.5.8

2018-5-24
* Re-implemented autoloading instances.
  Seems completely correct now states corrected.
* Set version as 1.5.8 rc5

2018-5-24 Will
* Revised Config.cpp so instances get base config.
  Previously they had the system defaults.
* Corrected anomally with loading saved states.
  Loaded the wrong one under some circumstances :(
* Set version as 1.5.8 rc4

2018-5-23 Will
* Corrected minor anomally in channel switcher.
* Solo modes except column use blue for highlight.
  This is in the mixer window and easier to identify.
* Set version as 1.5.8 rc3

2018-5-19 Will
* Cleaned up 'solo' interaction between CLI & GUI.
* Fixed regression: GUI not exporting banks.
* Code optimisations between Interface & Bank.
* Set version as 1.5.8 rc2

2018-5-18 Will
* Implemented universal bank swaps.
* Banks no longer private to SynthEngine.
  Too much access from Interchange needed and was
  getting silly always routing via SynthEngine!
* Updated docs.
* Improved banks swap error reporting.
* Temporarily disabled auto instance loading.
  it wasn't stable enough for release :(
* Set version as 1.5.8 rc1

2018-5-17 Will
* Changed Solo choice name 'Recoil' to 'TwoWay'.
* Reduced debounce time to 60mS.
* Improved CLI reporting.
* Improved instrument swap error messages.
* Updated docs.

2018-5-11 Will
* Completed universal instrument swaps.
* Partially updated docs.

2018-5-9 Will
* BugFix: GUI swap instrument with bank now ignored.
  Would segfault previously.
* Preparing for universal instrument swaps.
  From any root/bank to any root/bank :)

2018-5-7 Will
* Non relevant GUI settings now deactivated for LV2.

2018-5-5 Will
* CLI can now clear a part.
  set 'clear' instead of an instrument number.