@@ -295,7 +295,6 @@ void GuiUpdates::decode_updates(SynthEngine *synth, CommandBlock *getData)
                 case 2:
                 case 3:
                 case 4:
-                case 10:
                     switch(insertParam)
                     {
                         case 0:
@@ -345,7 +344,6 @@ void GuiUpdates::decode_updates(SynthEngine *synth, CommandBlock *getData)
                 case 2:
                 case 3:
                 case 4:
-                case 10:
                     switch(insertParam)
                     {
                         case 0:
@@ -410,7 +408,6 @@ void GuiUpdates::decode_updates(SynthEngine *synth, CommandBlock *getData)
                     case 2:
                     case 3:
                     case 4:
-                    case 10:
                         if (engine >= 0xC0)
                             switch(insertParam)
                             {
@@ -486,7 +483,6 @@ void GuiUpdates::decode_updates(SynthEngine *synth, CommandBlock *getData)
                 case 2:
                 case 3:
                 case 4:
-                case 10:
                     switch(insertParam)
                     {
                         case 0:
